--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: space-around;
     
-    background-color: #a8843c;  
+    background-color: #f7f3ecfa;  
     margin-top: 20px;
 
     .header__title {
